--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,9 +1,42 @@
-// @charset "UTF-8";
-* {
-    margin: 0;
-    padding: 0;
+@charset "UTF-8";
+
+body, h1, h2, h3, h4, h5, h6, hr, p, blockquote, dl, dt, dd, ul, ol, li, pre, form, fieldset, legend, button, input, textarea, th, td { margin:0; padding:0; }
+body, button, input, select, textarea { font:14px/1.5 tahoma, arial, \5b8b\4f53; }
+h1, h2, h3, h4, h5, h6{ font-size:100%; }
+address, cite, dfn, em, var { font-style:normal; }
+code, kbd, pre, samp { font-family:couriernew, courier, monospace; }
+small{ font-size:12px; }
+ul, ol { list-style:none; }
+a { text-decoration:none; color: #34495e}
+a:hover { text-decoration:underline; }
+sup { vertical-align:text-top; }
+sub{ vertical-align:text-bottom; }
+legend { color:#000; }
+fieldset, img { border:0; }
+button, input, select, textarea { font-size:100%; }
+table { border-collapse:collapse; border-spacing:0; }
+
+iframe {
+  width: 100%;
+  height: auto;  
 }
 
-html, body {
-    background: #f2f2f2;
+// @media (min-width:320px) {
+//   html {
+//     font-size: 11.94px;
+//   }
+// }
+// @media (min-width:375px) {
+//   html {
+//     font-size: 14px;
+//   }
+// }
+// @media (min-width:414px) {
+//   html {
+//     font-size: 15.46px;
+//   }
+// }
+
+html {
+  background: #fff;
 }
